--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "feather-icons": "^4.29.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "mousetrap": "^1.6.5",
     "ng-apexcharts": "^1.9.0",
     "ng-chartist": "^8.2.0",
@@ -56,6 +58,7 @@
     "ng2-google-charts": "^7.0.0",
     "ng2-search-filter": "^0.5.1",
     "ng5-slider": "^1.2.6",
+    "ngx-bootstrap": "^12.0.0",
     "ngx-cookie-service": "^17.1.0",
     "ngx-dropzone": "^3.1.0",
     "ngx-dropzone-wrapper": "^16.0.0",
@@ -85,6 +88,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/jasminewd2": "^2.0.13",
     "@types/leaflet": "^1.9.8",
+    "@types/moment": "^2.13.0",
     "@types/mousetrap": "^1.6.15",
     "@types/node": "^20.11.20",
     "codelyzer": "^6.0.2",
